fix: update h2 font-size on mobile

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -5,12 +5,16 @@ body {
 h2 {
   @include typography(
     $color:$primary-color, 
-    $size:'xl', 
+    $size:'2xl', 
     $align:center, 
     $weight:'bold', 
     $height:'xl', 
     $spacing: 'xl'
-  )
+  );
+
+  @include responsivity('sm') {
+    font-size: map-get($font-size, 'xl' );
+  }
 }
 
 p {
